<?xml version="1.0"?>
<package format="2">
  <name>openvr_ros</name>
  <version>0.1.0</version>
  <description>A package that connects to SteamVR through OpenVR and provides tracking information for VR devices in ROS.</description>

  <maintainer email="sharif1093@gmail.com">Mohammadreza Sharif</maintainer>
  <author>Mohammadreza Sharif</author>
  <license>MIT</license>

  <url type="repository">https://github.com/sharif1093/openvr_ros</url>
  <url type="bugtracker">https://github.com/sharif1093/openvr_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export />
</package>
